[package]
name        = "pq-chat-client"
version     = "0.1.0"
edition     = "2021"
description = "Post-quantum encrypted group chat client (Tauri)"

# Two crate targets: the executable, and a library so `tauri-cli` can hook
# mobile shims if you ever want them. Vanilla desktop only needs the bin.
[lib]
name       = "pq_chat_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Tauri ----------------------------------------------------------------
tauri        = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# --- Async / WS -----------------------------------------------------------
tokio              = { version = "1", features = ["full"] }
tokio-tungstenite  = { version = "0.21", features = ["native-tls"] }
futures-util       = "0.3"

# --- Same PQC stack as the server ----------------------------------------
pqcrypto-kyber     = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits    = "0.3"

# --- Symmetric crypto (client-only) --------------------------------------
aes-gcm = "0.10"

# --- Misc ----------------------------------------------------------------
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
uuid        = { version = "1", features = ["v4", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
base64      = "0.22"
rand        = "0.8"
anyhow      = "1"
thiserror   = "1"
directories = "5"
tracing     = "0.1"
tracing-subscriber = "0.3"

[features]
# This feature is used for production builds where `devUrl` config is unset.
custom-protocol = ["tauri/custom-protocol"]
